Bug 1618678 - Make disabling layout.css.cached-scrollbar-styles.enabled not a massive perf regression. r=heycam
(Because of all the extra declarations)

Differential Revision: https://phabricator.services.mozilla.com/D65916

UltraBlame original commit: 85020a807040535d2a0373bf48fddf8795c25928

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -88,6 +88,29 @@ visibility
 collapse
 ;
 }
+supports
+-
+moz
+-
+bool
+-
+pref
+(
+"
+layout
+.
+css
+.
+cached
+-
+scrollbar
+-
+styles
+.
+enabled
+"
+)
+{
 scrollcorner
 :
 -
@@ -257,6 +280,53 @@ border
 box
 ;
 }
+scrollbarbutton
+:
+-
+moz
+-
+native
+-
+anonymous
+-
+no
+-
+specificity
+slider
+:
+-
+moz
+-
+native
+-
+anonymous
+-
+no
+-
+specificity
+thumb
+:
+-
+moz
+-
+native
+-
+anonymous
+-
+no
+-
+specificity
+{
+direction
+:
+inherit
+;
+cursor
+:
+inherit
+;
+}
+}
 scrollbar
 [
 orient
@@ -320,52 +390,6 @@ box
 pack
 :
 center
-;
-}
-scrollbarbutton
-:
--
-moz
--
-native
--
-anonymous
--
-no
--
-specificity
-slider
-:
--
-moz
--
-native
--
-anonymous
--
-no
--
-specificity
-thumb
-:
--
-moz
--
-native
--
-anonymous
--
-no
--
-specificity
-{
-direction
-:
-inherit
-;
-cursor
-:
-inherit
 ;
 }
 resizer
